Refactor & implement workflow for user payment
* Refactor repository
* Modify prompt for better response
* Implement human-in-the-loop for user payment

--- a/.gitignore
+++ b/.gitignore
@@ -5,9 +5,12 @@ server/public
 vite.config.ts.*
 *.tar.gz
 **/__pycache__/**
+**/__pycache__
 test.ipynb
 uv.lock
+_*
 
 .idea
 .venv
 .env
+*/.langgraph_api
